Update .gitignore to include procedimientos uploads and enhance SQL migrations with additional columns for procedimiento details

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,8 @@ assets/uploads/pacientes/*
 assets/uploads/usuarios/*
 !assets/uploads/usuarios/*.txt
 
+assets/uploads/procedimientos/*
+!assets/uploads/procedimientos/*.txt
+
 application/cache/sessions/*
 .DS_Store
